--- a/about.html
+++ b/about.html
@@ -99,7 +99,7 @@
             <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-5 content">
-            <h2>Biografía, estilo y legado</h2>
+            <h2 style="color: var(--accent-color);">Biografía, estilo y legado</h2>
             <p class="fst-italic py-3">
               Kendrick Lamar ha combinado el virtuosismo lírico con una visión artística amplia, explorando temas personales y colectivos que han marcado la dirección del rap del siglo XXI.
             </p>
