--- a/albums.html
+++ b/albums.html
@@ -136,7 +136,7 @@
         <!-- TEXTO 67% -->
         <div class="col-lg-8">
           <div class="portfolio-description">
-            <h2>Discografía destacada y evolución artística</h2>
+            <h2 style="color: var(--accent-color);">Discografía destacada y evolución artística</h2>
 
             <p>
               Kendrick Lamar emergió desde la escena de Compton con mixtapes que mostraban un talento precoz para la narrativa y la métrica.
