--- a/letras.html
+++ b/letras.html
@@ -50,13 +50,13 @@
         <ul>
           <li><a href="index.html">Inicio<br></a></li>
           <li><a href="about.html">Biografía</a></li>
-          <li class="dropdown"><a href="discography.html"><span>Discografía</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+          <li class="dropdown"><a href="discography.html" class="active"><span>Discografía</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
               <li><a href="albums.html">Albums</a></li>
               <li><a href="videos.html">Videoclips</a></li>
-              <li class="dropdown"><a href="#"><span>Más</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+              <li class="dropdown"><a href="#" class="active"><span>Más</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
                 <ul>
-                  <li><a href="letras.html">Letras destacadas</a></li>
+                  <li><a href="letras.html" class="active">Letras destacadas</a></li>
                   <li><a href="premios.html">Premios</a></li>
                 </ul>
               </li>
@@ -98,25 +98,25 @@
         <p>Letras con más profundidad y significado </p>
       </div><!-- End Section Title -->
 
-      <div class="container" data-aos="fade-up">
+      <div class="container" style="margin-bottom: 2rem;" data-aos="fade-up">
         <h3>PRIDE.</h3>
         <p>"I set free all you abusers, this is transformation" - Reflexiona sobre la lucha interna entre los valores espirituales y la tentación material, sugiriendo que en un mundo ideal la fe siempre prevalecería sobre la riqueza.</p>
         <iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/track/6IZvVAP7VPPnsGX6bvgkqg?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
       </div>
 
-      <div class="container" data-aos="fade-up">
+      <div class="container" style="margin-bottom: 2rem;" data-aos="fade-up">
         <h3>Count me out</h3>
         <p>"I love when you count me out" - Representa un sentimiento de liberación al ser ignorado, permitiéndole escapar de la presión social y la necesidad de complacer a otros.</p>
         <iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/track/6BU1RZexmvJcBjgagVVt3M?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
       </div>
 
-      <div class="container" data-aos="fade-up">
+      <div class="container" style="margin-bottom: 2rem;" data-aos="fade-up">
         <h3>Watch the Party Die</h3>
         <p>"God, give me life, dear God, please give me peace" - Kendrick busca aislamiento de la toxicidad de la industria y la cultura del espectáculo, priorizando su paz mental y espiritual.</p>
         <iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/episode/4AzSLkFn9MENzO5zbaBg7R?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
       </div>
 
-      <div class="container" data-aos="fade-up">
+      <div class="container" style="margin-bottom: 2rem;" data-aos="fade-up">
         <h3>Sing About Me, I'm Dying of Thirst</h3>
         <p>"Sometimes I look in a mirror and ask myself: Am I really scared of passing away?" - Cuestiona la fragilidad de la vida y el miedo a morir antes de haber logrado una redención o dejado un legado significativo.</p>
         <iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/track/1Z2FvDFZSDQ23s4BDqpWqZ?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
