--- a/premios.html
+++ b/premios.html
@@ -26,14 +26,6 @@
 
   <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
-
-  <!-- =======================================================
-  * Template Name: PhotoFolio
-  * Template URL: https://bootstrapmade.com/photofolio-bootstrap-photography-website-template/
-  * Updated: Aug 07 2024 with Bootstrap v5.3.3
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
 </head>
 
 <body class="starter-page-page">
@@ -43,21 +35,21 @@
 
       <a href="index.html" class="logo d-flex align-items-center me-auto me-xl-0">
         <img src="assets/img/logo.png" alt="">
-        <h1 class="sitename">PhotoFolio</h1>
+        <h1 class="sitename">ArtistFolio</h1>
       </a>
 
       <nav id="navmenu" class="navmenu">
         <ul>
           <li><a href="index.html">Inicio<br></a></li>
           <li><a href="about.html">Biografía</a></li>
-          <li class="dropdown"><a href="discography.html"><span>Discografía</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+          <li class="dropdown"><a href="discography.html" class="active"><span>Discografía</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
               <li><a href="albums.html">Albums</a></li>
               <li><a href="videos.html">Videoclips</a></li>
-              <li class="dropdown"><a href="#"><span>Más</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+              <li class="dropdown"><a href="#" class="active"><span>Más</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
                 <ul>
                   <li><a href="letras.html">Letras destacadas</a></li>
-                  <li><a href="premios.html">Premios</a></li>
+                  <li><a href="premios.html" class="active">Premios</a></li>
                 </ul>
               </li>
             </ul>
@@ -89,8 +81,8 @@
       </div>
     </div><!-- End Page Title -->
 
-    <!-- Starter Section Section -->
-    <section id="starter-section" class="starter-section section">
+    <!-- Awards Section -->
+    <section id="awards-section" class="section">
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
@@ -99,10 +91,127 @@
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up">
-        <p>Contenido..</p>
+
+        <!-- Premios Grammy -->
+        <div class="row">
+          <div class="col-lg-12">
+            <h2 style="color: var(--accent-color); margin-bottom: 30px;"><i class="bi bi-trophy-fill me-2"></i>Premios Grammy</h2>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-lg-6">
+            <div class="award-item">
+              <span class="award-year">2018</span>
+              <h3>Mejor Álbum de Rap</h3>
+              <h4>DAMN.</h4>
+              <p>Su cuarto álbum de estudio que exploró temas de fe, identidad y la condición humana, consolidando su lugar como uno de los artistas más influyentes de su generación.</p>
+            </div>
+          </div>
+
+          <div class="col-lg-6">
+            <div class="award-item">
+              <span class="award-year">2018</span>
+              <h3>Mejor Canción de Rap</h3>
+              <h4>HUMBLE.</h4>
+              <p>Un himno que desafió la vanidad y la arrogancia en la cultura del hip-hop, convirtiéndose en uno de sus mayores éxitos comerciales.</p>
+            </div>
+          </div>
+
+          <div class="col-lg-6">
+            <div class="award-item">
+              <span class="award-year">2016</span>
+              <h3>Mejor Álbum de Rap</h3>
+              <h4>To Pimp a Butterfly</h4>
+              <p>Una obra maestra conceptual que fusionó jazz, funk y soul con letras profundamente políticas y sociales.</p>
+            </div>
+          </div>
+
+          <div class="col-lg-6">
+            <div class="award-item">
+              <span class="award-year">2016</span>
+              <h3>Mejor Interpretación de Rap</h3>
+              <h4>Alright</h4>
+              <p>Canción que se convirtió en himno del movimiento Black Lives Matter y símbolo de esperanza en tiempos difíciles.</p>
+            </div>
+          </div>
+
+          <div class="col-lg-6">
+            <div class="award-item">
+              <span class="award-year">2015</span>
+              <h3>Mejor Colaboración de Rap</h3>
+              <h4>These Walls</h4>
+              <p>Una exploración lírica de confinamiento físico y mental, destacando su maestría narrativa.</p>
+            </div>
+          </div>
+
+          <div class="col-lg-6">
+            <div class="award-item">
+              <span class="award-year">2014</span>
+              <h3>Mejor Álbum de Rap</h3>
+              <h4>good kid, m.A.A.d city</h4>
+              <p>Álbum conceptual autobiográfico sobre su juventud en Compton que redefinió el storytelling en el hip-hop.</p>
+            </div>
+          </div>
+        </div>
+
+        <!-- Premio Pulitzer -->
+        <div class="row" style="margin-top: 50px;">
+          <div class="col-lg-12">
+            <h2 style="color: var(--accent-color); margin-bottom: 30px;"><i class="bi bi-award-fill me-2"></i>Premio Pulitzer</h2>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-lg-12">
+            <div class="award-item">
+              <span class="award-year">2018</span>
+              <h3>Premio Pulitzer de Música</h3>
+              <h4>DAMN.</h4>
+              <p>Primer artista de hip-hop en ganar este prestigioso premio. El jurado lo describió como "una colección virtuosa de canciones unificadas por su lenguaje vernáculo auténtico y sus ritmos dinámicos que ofrecen captura afectante de la complejidad de la vida afroamericana moderna." Este reconocimiento marcó un momento histórico que elevó el hip-hop a un nivel de arte académico y cultural sin precedentes.</p>
+            </div>
+          </div>
+        </div>
+
+        <!-- Premios MTV Video Music -->
+        <div class="row" style="margin-top: 50px;">
+          <div class="col-lg-12">
+            <h2 style="color: var(--accent-color); margin-bottom: 30px;"><i class="bi bi-play-btn-fill me-2"></i>Premios MTV Video Music</h2>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-lg-4">
+            <div class="award-item">
+              <span class="award-year">2017</span>
+              <h3>Video of the Year</h3>
+              <h4>HUMBLE.</h4>
+              <p>Reconocimiento al videoclip más impactante del año.</p>
+            </div>
+          </div>
+
+          <div class="col-lg-4">
+            <div class="award-item">
+              <span class="award-year">2017</span>
+              <h3>Best Direction</h3>
+              <h4>HUMBLE.</h4>
+              <p>Por la dirección innovadora de Dave Meyers y The Little Homies.</p>
+            </div>
+          </div>
+
+          <div class="col-lg-4">
+            <div class="award-item">
+              <span class="award-year">2017</span>
+              <h3>Best Cinematography</h3>
+              <h4>HUMBLE.</h4>
+              <p>Por las imágenes visualmente impactantes y simbólicas.</p>
+            </div>
+          </div>
+        </div>
+
       </div>
 
-    </section><!-- /Starter Section Section -->
+    </section>
 
   </main>
 
@@ -110,7 +219,7 @@
 
     <div class="container">
       <div class="copyright text-center ">
-        <p>© <span>Copyright</span> <strong class="px-1 sitename">PhotoFolio</strong> <span>All Rights Reserved</span></p>
+        <p>© <span>Copyright</span> <strong class="px-1 sitename">ArtistFolio</strong> <span>Todos los derechos reservados</span></p>
       </div>
     </div>
 
