--- a/videos.html
+++ b/videos.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Videos - Kendrick Lamar</title>
+  <title>Videoclips - Kendrick Lamar</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
@@ -26,14 +26,6 @@
 
   <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
-
-  <!-- =======================================================
-  * Template Name: PhotoFolio
-  * Template URL: https://bootstrapmade.com/photofolio-bootstrap-photography-website-template/
-  * Updated: Aug 07 2024 with Bootstrap v5.3.3
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
 </head>
 
 <body class="starter-page-page">
@@ -43,17 +35,17 @@
 
       <a href="index.html" class="logo d-flex align-items-center me-auto me-xl-0">
         <img src="assets/img/logo.png" alt="">
-        <h1 class="sitename">PhotoFolio</h1>
+        <h1 class="sitename">ArtistFolio</h1>
       </a>
 
       <nav id="navmenu" class="navmenu">
         <ul>
           <li><a href="index.html">Inicio<br></a></li>
           <li><a href="about.html">Biografía</a></li>
-          <li class="dropdown"><a href="discography.html"><span>Discografía</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+          <li class="dropdown"><a href="discography.html" class="active"><span>Discografía</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
               <li><a href="albums.html">Albums</a></li>
-              <li><a href="videos.html">Videoclips</a></li>
+              <li><a href="videos.html" class="active">Videoclips</a></li>
               <li class="dropdown"><a href="#"><span>Más</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
                 <ul>
                   <li><a href="letras.html">Letras destacadas</a></li>
@@ -89,10 +81,108 @@
       </div>
     </div><!-- End Page Title -->
 
-    <!-- Starter Section Section -->
-    <section id="starter-section" class="starter-section section">
+    <!-- Videos Section -->
+    <section id="videos-section" class="section">
+      <div class="container" data-aos="fade-up">
 
-    </section><!-- /Starter Section Section -->
+        <!-- Video Item -->
+        <div class="row video-item align-items-center">
+          <div class="col-lg-6" data-aos="fade-right" data-aos-delay="100">
+            <div class="video-container">
+              <iframe src="https://www.youtube.com/embed/tvTRZJ-4EyI" allowfullscreen></iframe>
+            </div>
+          </div>
+          <div class="col-lg-6 video-synopsis" data-aos="fade-left" data-aos-delay="200">
+            <h3>HUMBLE.</h3>
+            <h4>DAMN. (2017)</h4>
+            <p>
+              "HUMBLE." es uno de los videoclips más icónicos de Kendrick Lamar, dirigido por Dave Meyers y The Little Homies. El video presenta imágenes poderosas que reflejan temas de humildad, religión y crítica social. Con referencias visuales que van desde la Última Cena hasta escenas de ostentación del hip-hop, Kendrick desafía la vanidad de la cultura contemporánea mientras permanece fiel a sus raíces. Este video ganó múltiples premios, incluyendo el MTV Video Music Award a Mejor Video del Año.
+            </p>
+          </div>
+        </div>
+
+        <!-- Video Item -->
+        <div class="row video-item align-items-center">
+          <div class="col-lg-6 order-lg-2" data-aos="fade-left" data-aos-delay="100">
+            <div class="video-container">
+              <iframe src="https://www.youtube.com/embed/Z-48u_uWMHY" allowfullscreen></iframe>
+            </div>
+          </div>
+          <div class="col-lg-6 order-lg-1 video-synopsis" data-aos="fade-right" data-aos-delay="200">
+            <h3>Alright</h3>
+            <h4>To Pimp a Butterfly (2015)</h4>
+            <p>
+              "Alright" se convirtió en un himno del movimiento Black Lives Matter y representa esperanza en medio de la adversidad. Dirigido por Colin Tilley, el videoclip muestra a Kendrick flotando por las calles de California, simbolizando la elevación espiritual sobre las dificultades terrenales. Con su mensaje de resistencia y fe, esta canción resonó profundamente en comunidades afectadas por la injusticia racial. El coro "We gon' be alright" se convirtió en un grito de protesta y esperanza.
+            </p>
+          </div>
+        </div>
+
+        <!-- Video Item -->
+        <div class="row video-item align-items-center">
+          <div class="col-lg-6" data-aos="fade-right" data-aos-delay="100">
+            <div class="video-container">
+              <iframe src="https://www.youtube.com/embed/NLZRYQMLDW4" allowfullscreen></iframe>
+            </div>
+          </div>
+          <div class="col-lg-6 video-synopsis" data-aos="fade-left" data-aos-delay="200">
+            <h3>DNA.</h3>
+            <h4>DAMN. (2017)</h4>
+            <p>
+              En "DNA.", Kendrick Lamar explora su identidad y herencia con una intensidad lírica incomparable. El video, protagonizado por Don Cheadle como interrogador, presenta una narrativa tensa donde Kendrick afirma su autenticidad y orgullo cultural. Las imágenes divididas en pantalla y la cinematografía dramática reflejan la dualidad y complejidad de su identidad como artista negro en Estados Unidos. Esta canción es una declaración poderosa sobre la herencia, el poder y la resistencia.
+            </p>
+          </div>
+        </div>
+
+        <!-- Video Item -->
+        <div class="row video-item align-items-center">
+          <div class="col-lg-6 order-lg-2" data-aos="fade-left" data-aos-delay="100">
+            <div class="video-container">
+              <iframe src="https://www.youtube.com/embed/hRK7PVJFbS8" allowfullscreen></iframe>
+            </div>
+          </div>
+          <div class="col-lg-6 order-lg-1 video-synopsis" data-aos="fade-right" data-aos-delay="200">
+            <h3>King Kunta</h3>
+            <h4>To Pimp a Butterfly (2015)</h4>
+            <p>
+              "King Kunta" es un himno de empoderamiento que celebra el éxito de Kendrick mientras critica a aquellos que intentan aprovecharse de él. El título hace referencia a Kunta Kinte de la novela "Raíces". El video muestra a Kendrick en Compton, su ciudad natal, rodeado de su comunidad y celebrando la cultura negra. Con un ritmo funky y letras afiladas, este videoclip es una celebración de la autenticidad y el orgullo cultural, rechazando la explotación de la industria musical.
+            </p>
+          </div>
+        </div>
+
+        <!-- Video Item -->
+        <div class="row video-item align-items-center">
+          <div class="col-lg-6" data-aos="fade-right" data-aos-delay="100">
+            <div class="video-container">
+              <iframe src="https://www.youtube.com/embed/uAPUkgeiFVY" allowfullscreen></iframe>
+            </div>
+          </div>
+          <div class="col-lg-6 video-synopsis" data-aos="fade-left" data-aos-delay="200">
+            <h3>The Heart Part 5</h3>
+            <h4>Single (2022)</h4>
+            <p>
+              "The Heart Part 5" utiliza tecnología deepfake para transformar el rostro de Kendrick en figuras icónicas de la cultura negra, incluyendo OJ Simpson, Kanye West, Jussie Smollett, Will Smith, Kobe Bryant y Nipsey Hussle. Este video innovador aborda temas de identidad, cancelación, trauma y redención. Kendrick canaliza las perspectivas de estas figuras controvertidas y celebradas, creando un comentario profundo sobre la fama, el escrutinio público y la humanidad compartida. Es una obra maestra visual y narrativa.
+            </p>
+          </div>
+        </div>
+
+        <!-- Video Item -->
+        <div class="row video-item align-items-center">
+          <div class="col-lg-6 order-lg-2" data-aos="fade-left" data-aos-delay="100">
+            <div class="video-container">
+              <iframe src="https://www.youtube.com/embed/zI383uEwA6Q" allowfullscreen></iframe>
+            </div>
+          </div>
+          <div class="col-lg-6 order-lg-1 video-synopsis" data-aos="fade-right" data-aos-delay="200">
+            <h3>N95</h3>
+            <h4>Mr. Morale & The Big Steppers (2022)</h4>
+            <p>
+              "N95" critica la superficialidad de la cultura de las redes sociales y la falsa autenticidad. El título hace referencia a las máscaras N95, simbolizando las "máscaras" metafóricas que la gente usa en línea. Dirigido por Kendrick y Dave Free, el video presenta escenas surrealistas y provocativas, desde Kendrick en un campo de algodón hasta escenas de lujo excesivo. El mensaje central invita a las personas a quitarse sus pretensiones y ser genuinas. Es una crítica social mordaz envuelta en imágenes impactantes.
+            </p>
+          </div>
+        </div>
+
+      </div>
+    </section><!-- /Videos Section -->
 
   </main>
 
@@ -100,7 +190,7 @@
 
     <div class="container">
       <div class="copyright text-center ">
-        <p>© <span>Copyright</span> <strong class="px-1 sitename">PhotoFolio</strong> <span>All Rights Reserved</span></p>
+        <p>© <span>Copyright</span> <strong class="px-1 sitename">ArtistFolio</strong> <span>Todos los derechos reservados</span></p>
       </div>
     </div>
 
