--- a/discography.html
+++ b/discography.html
@@ -66,6 +66,13 @@
           <span class="nav-separator">|</span>
           <li><a href="services.html">Servicios</a></li>
           <li><a href="contact.html">Contacto</a></li>
+          <li class="nav-search">
+            <form class="search-form" role="search" data-search-form>
+              <input type="search" name="q" placeholder="Buscar..." aria-label="Buscar" data-search-input>
+              <button type="submit" aria-label="Buscar"><i class="bi bi-search"></i></button>
+              <button type="button" class="clear-btn" data-search-clear aria-label="Limpiar"><i class="bi bi-x"></i></button>
+            </form>
+          </li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
@@ -181,6 +188,89 @@
       </div>
 
     </section><!-- /Gallery Section -->
+
+    <hr>
+
+    <!-- Artist Photos Section -->
+    <section id="artist-photos" class="artist-photos section">
+      <div class="container" data-aos="fade-up" data-aos-delay="100">
+
+        <div class="row gy-4 justify-content-center">
+          <div class="col-lg-4 col-md-6">
+            <div class="artist-photo-item">
+              <img src="assets/img/gallery/otros/imagen1.webp" class="img-fluid" alt="Kendrick Lamar en concierto">
+              <div class="gallery-links d-flex align-items-center justify-content-center">
+                <a href="assets/img/gallery/otros/imagen1.webp" class="glightbox preview-link" title="Kendrick Lamar en concierto"><i class="bi bi-arrows-angle-expand"></i></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6">
+            <div class="artist-photo-item">
+              <img src="assets/img/gallery/otros/imagen2.webp" class="img-fluid" alt="Kendrick Lamar en estudio">
+              <div class="gallery-links d-flex align-items-center justify-content-center">
+                <a href="assets/img/gallery/otros/imagen2.webp" class="glightbox preview-link" title="Kendrick Lamar en estudio"><i class="bi bi-arrows-angle-expand"></i></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6">
+            <div class="artist-photo-item">
+              <img src="assets/img/gallery/otros/imagen3.webp" class="img-fluid" alt="Kendrick Lamar backstage">
+              <div class="gallery-links d-flex align-items-center justify-content-center">
+                <a href="assets/img/gallery/otros/imagen3.webp" class="glightbox preview-link" title="Kendrick Lamar backstage"><i class="bi bi-arrows-angle-expand"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </section><!-- /Artist Photos Section -->
+
+    <!-- Concert Gallery Section -->
+    <section id="concert-gallery" class="gallery section">
+      <div class="container" data-aos="fade-up" data-aos-delay="100">
+
+        <div class="row gy-4 justify-content-center">
+          <div class="col-xl-3 col-lg-4 col-md-6">
+            <div class="gallery-item h-100">
+              <img src="assets/img/gallery/otros/concierto1.jpg" class="img-fluid" alt="Kendrick Lamar en concierto 1">
+              <div class="gallery-links d-flex align-items-center justify-content-center">
+                <a href="assets/img/gallery/otros/concierto1.jpg" class="glightbox preview-link" title="Concierto 1"><i class="bi bi-arrows-angle-expand"></i></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-xl-3 col-lg-4 col-md-6">
+            <div class="gallery-item h-100">
+              <img src="assets/img/gallery/otros/concierto2.jpg" class="img-fluid" alt="Kendrick Lamar en concierto 2">
+              <div class="gallery-links d-flex align-items-center justify-content-center">
+                <a href="assets/img/gallery/otros/concierto2.jpg" class="glightbox preview-link" title="Concierto 2"><i class="bi bi-arrows-angle-expand"></i></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-xl-3 col-lg-4 col-md-6">
+            <div class="gallery-item h-100">
+              <img src="assets/img/gallery/otros/concierto3.jpg" class="img-fluid" alt="Kendrick Lamar en concierto 3">
+              <div class="gallery-links d-flex align-items-center justify-content-center">
+                <a href="assets/img/gallery/otros/concierto3.jpg" class="glightbox preview-link" title="Concierto 3"><i class="bi bi-arrows-angle-expand"></i></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-xl-3 col-lg-4 col-md-6">
+            <div class="gallery-item h-100">
+              <img src="assets/img/gallery/otros/concierto4.jpg" class="img-fluid" alt="Kendrick Lamar en concierto 4">
+              <div class="gallery-links d-flex align-items-center justify-content-center">
+                <a href="assets/img/gallery/otros/concierto4.jpg" class="glightbox preview-link" title="Concierto 4"><i class="bi bi-arrows-angle-expand"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </section><!-- /Concert Gallery Section -->
 
   </main>
 
