--- a/premios.html
+++ b/premios.html
@@ -58,6 +58,13 @@
           <span class="nav-separator">|</span>
           <li><a href="services.html">Servicios</a></li>
           <li><a href="contact.html">Contacto</a></li>
+          <li class="nav-search">
+            <form class="search-form" role="search" data-search-form>
+              <input type="search" name="q" placeholder="Buscar..." aria-label="Buscar" data-search-input>
+              <button type="submit" aria-label="Buscar"><i class="bi bi-search"></i></button>
+              <button type="button" class="clear-btn" data-search-clear aria-label="Limpiar"><i class="bi bi-x"></i></button>
+            </form>
+          </li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
@@ -100,23 +107,6 @@
         </div>
 
         <div class="row">
-          <div class="col-lg-6">
-            <div class="award-item">
-              <span class="award-year">2018</span>
-              <h3>Mejor Álbum de Rap</h3>
-              <h4>DAMN.</h4>
-              <p>Su cuarto álbum de estudio que exploró temas de fe, identidad y la condición humana, consolidando su lugar como uno de los artistas más influyentes de su generación.</p>
-            </div>
-          </div>
-
-          <div class="col-lg-6">
-            <div class="award-item">
-              <span class="award-year">2018</span>
-              <h3>Mejor Canción de Rap</h3>
-              <h4>HUMBLE.</h4>
-              <p>Un himno que desafió la vanidad y la arrogancia en la cultura del hip-hop, convirtiéndose en uno de sus mayores éxitos comerciales.</p>
-            </div>
-          </div>
 
           <div class="col-lg-6">
             <div class="award-item">
