--- a/albums.html
+++ b/albums.html
@@ -66,6 +66,13 @@
           <span class="nav-separator">|</span>
           <li><a href="services.html">Servicios</a></li>
           <li><a href="contact.html">Contacto</a></li>
+          <li class="nav-search">
+            <form class="search-form" role="search" data-search-form>
+              <input type="search" name="q" placeholder="Buscar..." aria-label="Buscar" data-search-input>
+              <button type="submit" aria-label="Buscar"><i class="bi bi-search"></i></button>
+              <button type="button" class="clear-btn" data-search-clear aria-label="Limpiar"><i class="bi bi-x"></i></button>
+            </form>
+          </li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
